debian/*, .gemspec: use @spotify.com E-mail

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ ruby-moob (0.3.4-1) unstable; urgency=low
 
   * Initial release
 
- -- Pierre Carrier <pierre@gcarrier.fr>  Tue, 02 Aug 2011 05:34:31 +0400
+ -- Pierre Carrier <pierre@spotify.com>  Sat, 21 Apr 2012 21:42:53 +0200
