--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ruby-moob (0.3.8-1) precise; urgency=low
+
+  * New upstream release
+  * Fixes default credntial nag on newer Rx2x firmwares
+
+ -- Nathan Ferch <nf@spotify.com>  Wed, 23 Jan 2013 18:03:01 -5000
+
 ruby-moob (0.3.7-1) precise; urgency=low
 
   * New upstream release
