--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ruby-moob (0.3.13-1) precise; urgency=low
+
+  * Use Tempfile for jnlp
+
+ -- Nathan Ferch <nf@spotify.com> Fri, 26 July 2013 17:36:15 +0000
+
 ruby-moob (0.3.12-1) precise; urgency=low
 
   * 1.8.7 bugfix
