--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ruby-moob (0.3.14-1) precise; urgency=low
+
+  * Limited SuperMicro support.
+  * Support new iDRAC 7 firmwares.
+
+ -- Nathan Ferch <nf@spotify.com>  Mon, 10 Feb 2014 18:11:53 +0000
+
 ruby-moob (0.3.13-1) precise; urgency=low
 
   * Use Tempfile for jnlp
