--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ruby-moob (0.4.0) precise; urgency=low
+
+  * iDRAC 8 support
+  * Activate PEC module (PowerEdge C)
+
+ -- Nathan Ferch <nf@spotify.com>  Mon, 22 Jun 2015 15:27:49 -0400
+
 ruby-moob (0.3.16) precise; urgency=medium
 
   * JNLP support for SuperMicro
